--- a/FireChat/FireChat-Info.plist
+++ b/FireChat/FireChat-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>terryworona.com.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.firebase.chat</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
